# mimir

./: .gitmodules  CMakeLists.txt
src/: log.cc  main.c  server.c  status.c
src/include/mimir/: log.h  server.h  status.h
